--- a/devops-tools-defs/traefik.yml
+++ b/devops-tools-defs/traefik.yml
@@ -15,6 +15,6 @@ spec:
     syncOptions:
       - CreateNamespace=true
   source:
-    repoURL: git@github.com:4chain-ag/k8s-config.git
+    repoURL: git@github.com:4chain-ag/spv-wallet-regression.git
     targetRevision: HEAD
     path: charts/traefik
