--- a/.github/workflows/regression-tests.yaml
+++ b/.github/workflows/regression-tests.yaml
@@ -1,4 +1,4 @@
-name: Regression tests for spv-wallet
+name: Regression tests for SPV-Wallet
 
 on:
   workflow_dispatch:
@@ -25,6 +25,7 @@ jobs:
           curl -sLO https://github.com/argoproj/argo-cd/releases/latest/download/argocd-linux-amd64
           chmod +x argocd-linux-amd64
           sudo mv argocd-linux-amd64 /usr/local/bin/argocd
+          argocd version
 
       - name: Install Helm
         run: |
@@ -49,4 +50,50 @@ jobs:
           argocd app create spv-wallet-instance-sqlite \
             --repo https://github.com/${{ github.repository }} \
             --path charts/spv-wallet-regression-sqlite \
-            --dest-server https://kubernetes
+            --dest-server https://kubernetes.default.svc \
+            --dest-namespace default \
+            --revision HEAD \
+            --sync-policy automated
+
+      - name: Deploy Postgres Instance
+        run: |
+          COMMIT_SHA=${{ github.event.inputs.commit_sha }}
+          DOMAIN_NAME="test-${COMMIT_SHA}-postgres.dev.4chain.space"
+          helm upgrade --install spv-wallet-instance-postgres ./charts/spv-wallet-regression-postgres \
+            --set global.domainName=${DOMAIN_NAME} \
+            --set spv-wallet.image.tag=${{ github.event.inputs.image_tag }}
+          argocd app create spv-wallet-instance-postgres \
+            --repo https://github.com/${{ github.repository }} \
+            --path charts/spv-wallet-regression-postgres \
+            --dest-server https://kubernetes.default.svc \
+            --dest-namespace default \
+            --revision HEAD \
+            --sync-policy automated
+
+      - name: Wait for Applications to be Healthy
+        run: |
+          for i in {1..5}; do
+            STATUS_SQLITE=$(argocd app get spv-wallet-instance-sqlite -o json | jq -r '.status.health.status')
+            STATUS_POSTGRES=$(argocd app get spv-wallet-instance-postgres -o json | jq -r '.status.health.status')
+            SYNC_SQLITE=$(argocd app get spv-wallet-instance-sqlite -o json | jq -r '.status.sync.status')
+            SYNC_POSTGRES=$(argocd app get spv-wallet-instance-postgres -o json | jq -r '.status.sync.status')
+            if [[ "$STATUS_SQLITE" == "Healthy" && "$STATUS_POSTGRES" == "Healthy" && "$SYNC_SQLITE" == "Synced" && "$SYNC_POSTGRES" == "Synced" ]]; then
+              echo "Both applications are synced and healthy"
+              break
+            fi
+            if [[ $i -eq 5 ]]; then
+              echo "Applications did not become healthy and synced in time"
+              exit 1
+            fi
+            echo "Waiting for applications to be healthy and synced..."
+            sleep 5
+          done
+
+      - name: Perform Task
+        run: echo "Applications are synced and healthy. Performing task..."
+
+      - name: Remove SQLite Instance
+        run: argocd app delete spv-wallet-instance-sqlite --yes
+
+      - name: Remove Postgres Instance
+        run: argocd app delete spv-wallet-instance-postgres --yes
