fix(SPV-894): add grpc web flag to properly use argocd cli

--- a/.github/workflows/regression-tests.yaml
+++ b/.github/workflows/regression-tests.yaml
@@ -30,7 +30,7 @@ jobs:
           ARGOCD_USERNAME: ${{ secrets.ARGOCD_USERNAME }}
           ARGOCD_PASSWORD: ${{ secrets.ARGOCD_PASSWORD }}
         run: |
-          argocd login $ARGOCD_SERVER --username $ARGOCD_USERNAME --password $ARGOCD_PASSWORD --insecure
+          argocd login $ARGOCD_SERVER --username $ARGOCD_USERNAME --password $ARGOCD_PASSWORD --insecure --grpc-web
 
       - name: Deploy SQLite Instance
         run: |
@@ -44,6 +44,7 @@ jobs:
             --revision HEAD \
             --sync-policy automated \
             --upsert \
+            --grpc-web \
             --helm-set global.domainName=${DOMAIN_NAME} \
             --helm-set spv-wallet.image.tag=${{ github.event.inputs.image_tag }}
         shell: bash
@@ -60,6 +61,7 @@ jobs:
             --revision HEAD \
             --sync-policy automated \
             --upsert \
+            --grpc-web \
             --helm-set global.domainName=${DOMAIN_NAME} \
             --helm-set spv-wallet.image.tag=${{ github.event.inputs.image_tag }}
         shell: bash
@@ -67,10 +69,10 @@ jobs:
       - name: Wait for Applications to be Healthy
         run: |
           for i in {1..5}; do
-            STATUS_SQLITE=$(argocd app get spv-wallet-instance-sqlite -o json | jq -r '.status.health.status')
-            STATUS_POSTGRES=$(argocd app get spv-wallet-instance-postgres -o json | jq -r '.status.health.status')
-            SYNC_SQLITE=$(argocd app get spv-wallet-instance-sqlite -o json | jq -r '.status.sync.status')
-            SYNC_POSTGRES=$(argocd app get spv-wallet-instance-postgres -o json | jq -r '.status.sync.status')
+            STATUS_SQLITE=$(argocd app get spv-wallet-instance-sqlite --grpc-web -o json | jq -r '.status.health.status')
+            STATUS_POSTGRES=$(argocd app get spv-wallet-instance-postgres --grpc-web -o json | jq -r '.status.health.status')
+            SYNC_SQLITE=$(argocd app get spv-wallet-instance-sqlite --grpc-web -o json | jq -r '.status.sync.status')
+            SYNC_POSTGRES=$(argocd app get spv-wallet-instance-postgres --grpc-web -o json | jq -r '.status.sync.status')
             if [[ "$STATUS_SQLITE" == "Healthy" && "$STATUS_POSTGRES" == "Healthy" && "$SYNC_SQLITE" == "Synced" && "$SYNC_POSTGRES" == "Synced" ]]; then
               echo "Both applications are synced and healthy"
               break
@@ -88,7 +90,7 @@ jobs:
         run: echo "Applications are synced and healthy. Performing task..."
 
       - name: Remove SQLite Instance
-        run: argocd app delete spv-wallet-instance-sqlite --yes
+        run: argocd app delete spv-wallet-instance-sqlite --yes --grpc-web
 
       - name: Remove Postgres Instance
-        run: argocd app delete spv-wallet-instance-postgres --yes
+        run: argocd app delete spv-wallet-instance-postgres --yes --grpc-web
