--- a/charts/spv-wallet-regression-postgres/values.yaml
+++ b/charts/spv-wallet-regression-postgres/values.yaml
@@ -1,8 +1,4 @@
 global:
-  adminkeySecret: null
-  # we use here defaults for the admin keys -> no need to create secret
-  pubkey: 'xpub661MyMwAqRbcFgfmdkPgE2m5UjHXu9dj124DbaGLSjaqVESTWfCD4VuNmEbVPkbYLCkykwVZvmA8Pbf8884TQr1FgdG2nPoHR8aB36YdDQh'
-  prvkey: 'xprv9s21ZrQH143K3CbJXirfrtpLvhT3Vgusdo8coBritQ3rcS7Jy7sxWhatuxG5h2y1Cqj8FKmPp69536gmjYRpfga2MJdsGyBsnB12E19CESK'
   storageClass: openebs-hostpath
   ingress:
     className: traefik
@@ -16,7 +12,7 @@ spv-wallet:
     tag: ''
 
 block-headers-service:
-  enabled: false
+  enabled: true
 spv-wallet-admin:
   enabled: false
 spv-wallet-web:
