feat(SPV-894): update values to start postgres using sqlite

--- a/charts/spv-wallet-regression-postgres/values.yaml
+++ b/charts/spv-wallet-regression-postgres/values.yaml
@@ -13,6 +13,12 @@ spv-wallet:
 
 block-headers-service:
   enabled: true
+  config:
+    db:
+      engine: sqlite
+  postgresql:
+    enabled: false
+
 spv-wallet-admin:
   enabled: false
 spv-wallet-web:
