--- a/charts/spv-wallet-regression-sqlite/values.yaml
+++ b/charts/spv-wallet-regression-sqlite/values.yaml
@@ -16,6 +16,9 @@ spv-wallet-stack:
       db:
         datastore:
           engine: sqlite
+      auth:
+        admin_key: xpub661MyMwAqRbcFgfmdkPgE2m5UjHXu9dj124DbaGLSjaqVESTWfCD4VuNmEbVPkbYLCkykwVZvmA8Pbf8884TQr1FgdG2nPoHR8aB36YdDQh
+
     postgresql:
       enabled: false
 
