--- a/.github/workflows/regression-tests.yaml
+++ b/.github/workflows/regression-tests.yaml
@@ -64,7 +64,8 @@ jobs:
 
       - name: Wait for Applications to be Healthy
         run: |
-          for i in {1..5}; do
+          sleep 270  # Sleep for 4:30 minutes (270 seconds)
+          for i in {1..3}; do  # Check 3 times at larger intervals
             STATUS_SQLITE=$(argocd app get reg-sl-${TEST_ID} --grpc-web -o json | jq -r '.status.health.status')
             STATUS_POSTGRES=$(argocd app get reg-pg-${TEST_ID} --grpc-web -o json | jq -r '.status.health.status')
             SYNC_SQLITE=$(argocd app get reg-sl-${TEST_ID} --grpc-web -o json | jq -r '.status.sync.status')
@@ -73,12 +74,12 @@ jobs:
               echo "Both applications are synced and healthy"
               break
             fi
-            if [[ $i -eq 5 ]]; then
+            if [[ $i -eq 3 ]]; then  # If final check and still not healthy, fail
               echo "Applications did not become healthy and synced in time"
               exit 1
             fi
             echo "Waiting for applications to be healthy and synced..."
-            sleep 5
+            sleep 120  # Wait for 2 minutes before next check
           done
         shell: bash
 
